created banner secction and navbar
-created banner section
-created navbar
-made animations for middle text,logo and nav links

--- a/index.html
+++ b/index.html
@@ -7,10 +7,24 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body id="ss">
+<body>
+    <header>
+        <nav>
+            <h1 class="fadeLeft">Logo</h1>
+            <div class="nav-links fadeRight">
+                <a href="#">Home</a>
+                <a href="#">Team</a>
+                <a href="#">About Us</a>
+                <a href="#">Contact</a>
+            </div>
+        </nav>
+        <div class="center-text fadeMid">
+            <h1>Lorem ipsum</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <button class="join-btn normal">Join Us</button>
+        </div>
+    </header>
 
-    <h1>This is a Heading</h1>
-    <p>This is a paragraph.</p>
 
     <script src="js/script.js"></script>
 </body>
