created basic about us section
-basic about u section \n-prepared other divs

--- a/index.html
+++ b/index.html
@@ -2,28 +2,70 @@
 <html>
 
 <head>
-    <title>Page Title</title>
+    <title>Business Website</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <header>
+    <header id="home">
         <nav>
             <h1 class="fadeLeft">Logo</h1>
             <div class="nav-links fadeRight">
-                <a href="#">Home</a>
-                <a href="#">Team</a>
-                <a href="#">About Us</a>
-                <a href="#">Contact</a>
+                <a href="#home">Home</a>
+                <a href="#about">About Us</a>
+                <a href="#weoffer">We offer</a>
+                <a href="#team">Team</a>
+                <a href="#portfolio">Portfolio</a>
+                <a href="#contact">Contact</a>
             </div>
         </nav>
         <div class="center-text fadeMid">
-            <h1>Lorem ipsum</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <h1>Think different</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam viverra arcu quis nibh mattis pretium 
+                et a ex. Nullam fermentum sed metus ut tristique. Interdum et malesuada fames ac ante ipsum primis
+                 in faucibus. </p>
             <button class="join-btn normal">Join Us</button>
         </div>
     </header>
+    <section id="about">
+        <h1>Who we are?</h1>
+        <h4>We are a company that provides high quality services.
+             We have been serving for more than 12 years.Our most important qualities are:</h4>
+             <div class="qualities">
+                 <div class="qual-item">
+                     <h2>Ambition</h2>
+                     <p>Dreams and goals drive a company toward success. Employees with ambition 
+                         are driven and work hard to reach success and are able to focus on
+                          the company’s ultimate goals.</p>
+                 </div>
+                 <div class="qual-item">
+                    <h2>Decision-making</h2>
+                    <p>Practical decision-making skills are an asset when it comes to great business qualities.
+                         Employers look for someone who can make effective decisions while considering the needs 
+                         and interests of others.</p>
+                 </div>
+                 <div class="qual-item">
+                    <h2>Reliability and Dependability</h2>
+                    <p>Employers search for those that go the extra mile and those who put in the hard work to make
+                         the business become successful. Reliability and dependability demonstrates commitment</p>
+                 </div>
+             </div>
+    </section>
+    <section id="weoffer">
+        <h1>We offer</h1>
+    </section>
+    <section id="team">
+        <h1>Team</h1>
+    </section>
+    <section id="portfolio">
+        <h1>Portfolio</h1>
+    </section>
+    <section id="contact">
+        <h1>Contact</h1>
+        <footer></footer>
+    </section>
+   
 
 
     <script src="js/script.js"></script>
