--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Business Website</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/jquery.min.js"></script>
 </head>
 
 <body>
@@ -22,38 +23,34 @@
         </nav>
         <div class="center-text fadeMid">
             <h1>Think different</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam viverra arcu quis nibh mattis pretium 
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam viverra arcu quis nibh mattis pretium
                 et a ex. Nullam fermentum sed metus ut tristique. Interdum et malesuada fames ac ante ipsum primis
-                 in faucibus. </p>
+                in faucibus. </p>
             <button class="join-btn normal">Join Us</button>
         </div>
     </header>
     <section id="about">
-        <h1>Who we are?</h1>
-        <h4>We are a company that provides high quality services.
-             We have been serving for more than 12 years.Our most important qualities are:</h4>
-             <div class="qualities">
-                 <div class="qual-item">
-                     <h2>Ambition</h2>
-                     <p>Dreams and goals drive a company toward success. Employees with ambition 
-                         are driven and work hard to reach success and are able to focus on
-                          the company’s ultimate goals.</p>
-                 </div>
-                 <div class="qual-item">
-                    <h2>Decision-making</h2>
-                    <p>Practical decision-making skills are an asset when it comes to great business qualities.
-                         Employers look for someone who can make effective decisions while considering the needs 
-                         and interests of others.</p>
-                 </div>
-                 <div class="qual-item">
-                    <h2>Reliability and Dependability</h2>
-                    <p>Employers search for those that go the extra mile and those who put in the hard work to make
-                         the business become successful. Reliability and dependability demonstrates commitment</p>
-                 </div>
-             </div>
+
     </section>
     <section id="weoffer">
-        <h1>We offer</h1>
+        <div class="container">
+            <div class="text">
+                <div class="text-position">
+                    <h1>We offer</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                        ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                        reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+                        anim id est laborum.</p>
+                </div>
+            </div>
+            <div class="image">
+
+                <img src="images/bg-img.jpg" alt="fsd">
+
+            </div>
+        </div>
     </section>
     <section id="team">
         <h1>Team</h1>
@@ -65,7 +62,7 @@
         <h1>Contact</h1>
         <footer></footer>
     </section>
-   
+
 
 
     <script src="js/script.js"></script>
