created team section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery.min.js"></script>
+    <script src="https://kit.fontawesome.com/24624c16b8.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -53,7 +54,90 @@
         </div>
     </section>
     <section id="team">
-        <h1>Team</h1>
+        <div class="main-text">
+            <h1>Team</h1>
+            <p>Our most important members</p>
+        </div>
+        <div class="team-content">
+            <div class="person-content">
+                <div class="image-content">
+                    <div class="center-image">
+                        <img src="images/bezos.jpg" alt="fds">
+                    </div>
+
+                </div>
+                <div class="text-content">
+                    <h1>Jeff Bezos</h1>
+                    <h6>CEO of Amazon</h6>
+                    <p>If you double the number of experiments you do per 
+                        year you're going to double your inventiveness.</p>
+                    <div class="social-media">
+                        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="person-content">
+                <div class="image-content">
+                    <div class="center-image">
+                        <img src="images/elon.jpg" alt="fds">
+                    </div>
+                </div>
+                <div class="text-content">
+                    <h1>Elon Musk</h1>
+                    <h6>CEO of Tesla</h6>
+                    <p>If you double the number of experiments you do per 
+                        year you're going to double your inventiveness.</p>
+                    <div class="social-media">
+                        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="person-content">
+                <div class="image-content">
+                    <div class="center-image">
+                        <img src="images/gates.jpg" alt="fds">
+                    </div>
+                </div>
+                <div class="text-content">
+                    <h1>Bill Gates</h1>
+                    <h6>CEO of Microsoft</h6>
+                    <p>If you double the number of experiments you do per 
+                        year you're going to double your inventiveness.</p>
+                    <div class="social-media">
+                        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="person-content">
+                <div class="image-content">
+                    <div class="center-image">
+                        <img src="images/shelby.jpg" alt="fds">
+                    </div>
+                </div>
+                <div class="text-content">
+                    <h1>Thomas Shelby</h1>
+                    <h6>CEO of Peaky Blinders</h6>
+                    <p>If you double the number of experiments you do per 
+                        year you're going to double your inventiveness.</p>
+                    <div class="social-media">
+                        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </section>
     <section id="portfolio">
         <h1>Portfolio</h1>
