--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Business Website</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/jquery.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/24624c16b8.js" crossorigin="anonymous"></script>
 </head>
 
@@ -30,113 +30,47 @@
         </div>
     </header>
 
-    <section id="about">
-        <div class="container">
-            <div class="text">
-                <div class="text-position">
-                    <h1>I am Andrei Daraban</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                        ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                        reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-                        anim id est laborum.</p>
-                </div>
-            </div>
-            <div class="image">
-
-                <img src="images/bg-img.jpg" alt="fsd">
-
-            </div>
-        </div>
-    </section>
 
     <section id="portfolio">
-        <div class="main-div">
-            <div class="container">
-                <img src="images/gallery/0.jpg" alt="">
-                <div class="image-container">
-                    <img src="images/gallery/1.jfif" alt="">
-                    <img src="images/gallery/2.jfif" alt="">
-                    <img src="images/gallery/3.jfif" alt="">
-                    <img src="images/gallery/4.jfif" alt="">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-3 position-relative">
+                    <img src="images/gallery/9.png" alt="" class="w-100 h-100">
+                    <span class="view-picture">View</span>
                 </div>
-                <img src="images/gallery/14.jpg" alt="">
-                <div class="image-container">
-                    <img src="images/gallery/6.jfif" alt="">
-                    <img src="images/gallery/7.jfif" alt="">
-                    <img src="images/gallery/8.jfif" alt="">
-                    <img src="images/gallery/9.jfif" alt="">
+                <div class="col-3 position-relative">
+                    <img src="images/gallery/8.jpg" alt="" class="w-100 h-100">
+                    <span class="view-picture">View</span>
                 </div>
-
-                <img src="images/gallery/10.jfif" alt="">
-                <div class="image-container">
-                    <img src="images/gallery/11.jfif" alt="">
-                    <img src="images/gallery/12.jfif" alt="">
-                    <img src="images/gallery/13.jfif" alt="">
-                    <img src="images/gallery/29.jpg" alt="">
+                <div class="col-3 position-relative">
+                    <img src="images/gallery/10.jpg" alt="" class="w-100 h-100">
+                    <span class="view-picture">View</span>
+                </div>
+                <div class="col-3 position-relative">
+                    <img src="images/gallery/7.jpg" alt="" class="w-100 h-100">
+                    <span class="view-picture">View</span>
                 </div>
             </div>
-            <div class="container">
-
-                <div class="image-container">
-                    <img src="images/gallery/11.jfif" alt="">
-                    <img src="images/gallery/12.jfif" alt="">
-                    <img src="images/gallery/13.jfif" alt="">
-                    <img src="images/gallery/29.jpg" alt="">
+            <div class="row">
+                <div class="col-3">
+                    <img src="images/gallery/6.jpg" alt="" class="w-100 h-100">
                 </div>
-                <img src="images/gallery/29.jpg" alt="">
-                <div class="image-container">
-                    <img src="images/gallery/1.jfif" alt="">
-                    <img src="images/gallery/2.jfif" alt="">
-                    <img src="images/gallery/3.jfif" alt="">
-                    <img src="images/gallery/4.jfif" alt="">
+                <div class="col-3">
+                    <img src="images/gallery/4.jpg" alt="" class="w-100 h-100">
                 </div>
-
-                <img src="images/gallery/24.jpg" alt="">
-                <div class="image-container">
-                    <img src="images/gallery/6.jfif" alt="">
-                    <img src="images/gallery/7.jfif" alt="">
-                    <img src="images/gallery/8.jfif" alt="">
-                    <img src="images/gallery/9.jfif" alt="">
+                <div class="col-3">
+                    <img src="images/gallery/3.jpg" alt="" class="w-100 h-100">
                 </div>
-                <img src="images/gallery/29.jpg" alt="">
+                <div class="col-3">
+                    <img src="images/gallery/2.jpg" alt="" class="w-100 h-100">
+                </div>
             </div>
-
-
         </div>
-
-    </section>
-    <section id="contact">
-        <h1>Contact</h1>
-        <div class="contact-container">
-            <div>
-                <input type="text" placeholder="Your Name">
-            </div>
-            <div>
-                <input type="email" placeholder="Your Email">
-            </div>
-            <div>
-                <input type="text" placeholder="Subject">
-            </div>
-            <div>
-                <textarea type="" placeholder="Message"></textarea>
-            </div>
-            <button class="normal">Send Message</button>
-        </div>
-        <footer>
-            <div class="media">
-                <a href="#">Facebook</i></a>
-                <a href="#">Twitter</a>
-                <a href="#">Youtube</a>
-                <a href="#">LinkedIn</a>
-            </div>
-            <h1>Copyright &copy; 2022 by Andrei Daraban. All Rights Reserved</h1>
-        </footer>
-    </section>
+      </section>
+   
 
 
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
 </body>
 
